# erins_portfolio

./: README.md  pyproject.toml
home/: views.py
home/templates/home/: base.html  home.html
portfolio/: settings.py  urls.py
projects/: models.py  urls.py  views.py
projects/templates/projects/: project.html  projects.html
static/css/: styles.css
